--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.3.0",
+    "@types/react-router": "^5.1.20",
+    "@types/react-router-dom": "^5.3.3",
     "react": "^17.0.0||^18.0.0||^19.0.0",
-    "react-dom": "^17.0.0||^18.0.0||^19.0.0"
+    "react-dom": "^17.0.0||^18.0.0||^19.0.0",
+    "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
